--- a/cart.html
+++ b/cart.html
@@ -85,7 +85,10 @@
                                             <span class="cart_summa">&#36;0.00</span>
                                         </span>
                                     </a>
-                                    <a href="login.html" class="top_panel_login_button sc_button sc_button_style_filled sc_button_size_small" style="padding:6px 14px;">Login / Register</a>
+                                        <a href="login.html" class="top_panel_login_button sc_button sc_button_style_filled sc_button_size_small" style="padding:6px 14px;">Login / Register</a>
+                                        <a href="#" class="user_icon_button" style="display:none;align-items:center;justify-content:center;width:34px;height:34px;border-radius:50%;background:#72b16a;color:#fff;font-size:15px;text-decoration:none;" title="User">
+                                            <span class="user_initial" style="font-weight:600;">U</span>
+                                        </a>
                                 </div>
                                 <ul class="widget_area sidebar_cart sidebar">
                                     <li>
@@ -427,6 +430,8 @@
 
 <!-- Global cart script for mini-cart and cart page rendering -->
 <script type='text/javascript' src='js/local-cart.js'></script>
+<script type="text/javascript" src="js/cart-api.js"></script>
+<script type="text/javascript" src="js/mini-cart.js"></script>
 
 <script>
     document.addEventListener('DOMContentLoaded', function () {
