cart and login and sessions and reviews

--- a/classic.html
+++ b/classic.html
@@ -497,6 +497,8 @@
 <script type='text/javascript' src='js/blog.js'></script>
 <!-- Global cart script -->
 <script type='text/javascript' src='js/local-cart.js'></script>
+<script type='text/javascript' src='js/cart-api.js'></script>
+<script type='text/javascript' src='js/mini-cart.js'></script>
 <script type='text/javascript' src='js/auth-session.js'></script>
 
 </body>
