--- a/about-2.html
+++ b/about-2.html
@@ -852,6 +852,8 @@
 
 <!-- Global cart script -->
 <script type='text/javascript' src='js/local-cart.js'></script>
+<script type='text/javascript' src='js/cart-api.js'></script>
+<script type='text/javascript' src='js/mini-cart.js'></script>
 <script type='text/javascript' src='js/auth-session.js'></script>
 <script>
 // Dynamic year tabs pagination (2017-2025, show 5 at a time)
