--- a/checkout.html
+++ b/checkout.html
@@ -278,6 +278,8 @@
     </script>
     <!-- Global cart script so checkout can reflect the mini-cart/cart totals -->
     <script type='text/javascript' src='js/local-cart.js'></script>
+    <script type='text/javascript' src='js/cart-api.js'></script>
+    <script type='text/javascript' src='js/mini-cart.js'></script>
     <script type='text/javascript' src='js/product-data.js'></script>
     <script type='text/javascript' src='js/auth-session.js'></script>
 </body>
