--- a/index.html
+++ b/index.html
@@ -1226,6 +1226,8 @@
 
 <!-- Ensure cart is available globally -->
 <script type='text/javascript' src='js/local-cart.js'></script>
+<script type="text/javascript" src="js/cart-api.js"></script>
+<script type="text/javascript" src="js/mini-cart.js"></script>
 <script type='text/javascript' src='js/auth-session.js'></script>
 <script>
 // Year bar pagination logic for index page (#sc_tabs_583)
