--- a/login.html
+++ b/login.html
@@ -159,5 +159,7 @@
       });
     });
   </script>
+  <script type="text/javascript" src="js/cart-api.js"></script>
+  <script type="text/javascript" src="js/mini-cart.js"></script>
 </body>
 </html>
