--- a/recipe.html
+++ b/recipe.html
@@ -445,6 +445,8 @@
 <script type='text/javascript' src='js/recipe.js'></script>
 <!-- Global cart script -->
 <script type='text/javascript' src='js/local-cart.js'></script>
+<script type='text/javascript' src='js/cart-api.js'></script>
+<script type='text/javascript' src='js/mini-cart.js'></script>
 <script type='text/javascript' src='js/auth-session.js'></script>
 </body>
 </html>
