--- a/recipes.html
+++ b/recipes.html
@@ -715,6 +715,8 @@
 
 <!-- Global cart script -->
 <script type='text/javascript' src='js/local-cart.js'></script>
+<script type='text/javascript' src='js/cart-api.js'></script>
+<script type='text/javascript' src='js/mini-cart.js'></script>
 <script type='text/javascript' src='js/auth-session.js'></script>
 
 </body>
