--- a/single-product.html
+++ b/single-product.html
@@ -595,6 +595,9 @@
 <script type='text/javascript' src='js/custom/util.min.js'></script>
 <script type='text/javascript' src='js/single-product.js'></script>
 <script type='text/javascript' src='js/local-cart.js'></script>
+    <!-- Server-side cart API integration -->
+    <script type="text/javascript" src="js/cart-api.js"></script>
+    <script type="text/javascript" src="js/mini-cart.js"></script>
 <script type='text/javascript' src='js/auth-session.js'></script>
 <script>
     // Dynamically update the <title> tag based on product
