--- a/shop.html
+++ b/shop.html
@@ -874,9 +874,10 @@
 <script type="text/javascript" src="js/shop.js"></script>
 <script type="text/javascript" src="js/product-data.js"></script>
 <script type="text/javascript" src="js/shop-price-range.js"></script>
-    <script type="text/javascript" src="js/local-cart.js"></script>
+    <!-- Server cart: API first, then mini-cart, then page glue -->
     <script type="text/javascript" src="js/cart-api.js"></script>
     <script type="text/javascript" src="js/mini-cart.js"></script>
+    <script type="text/javascript" src="js/local-cart.js"></script>
 <script type="text/javascript" src="js/auth-session.js"></script>
 <script type="text/javascript">
     // Hydrate dynamic prices from PRODUCT_PRICING map
