--- a/shop.html
+++ b/shop.html
@@ -874,6 +874,7 @@
 <script type="text/javascript" src="js/shop.js"></script>
 <script type="text/javascript" src="js/product-data.js"></script>
 <script type="text/javascript" src="js/shop-price-range.js"></script>
+<script type="text/javascript" src="js/shop-dynamic.js"></script>
     <!-- Server cart: API first, then mini-cart, then page glue -->
     <script type="text/javascript" src="js/cart-api.js"></script>
     <script type="text/javascript" src="js/mini-cart.js"></script>
