--- a/single-product.html
+++ b/single-product.html
@@ -171,7 +171,7 @@
                     <article class="post_item post_item_single post_item_product">
                         <nav class="woocommerce-breadcrumb">
                             <a href="index.html">Home</a> / 
-                            <a href="#">Yoghurt</a> / Parmesan Cheese
+                            <a href="shop.html">Shop</a> / Product
                         </nav>
                         <div class="product has-post-thumbnail first instock purchasable">
 
@@ -190,7 +190,7 @@
                                     <p></p>
                                 </div>
 
-                                <form class="variations_form cart" method="post" enctype='multipart/form-data' data-product_id="412" data-product_variations="">
+                                <form class="variations_form cart" method="post" enctype='multipart/form-data' data-product_id="" data-product_variations="">
                                     
                                                               
                                     <table class="variations" cellspacing="0">
@@ -241,8 +241,8 @@
                                                 <input type="number" class="input-text qty text" step="1" min="1" max="" name="quantity" value="1" title="Qty" size="4" pattern="[0-9]*" inputmode="numeric" />
                                             </div>
                                             <button type="submit" class="single_add_to_cart_button button alt add-to-cart-button">Add to cart</button>
-                                            <input type="hidden" name="add-to-cart" value="412" />
-                                            <input type="hidden" name="product_id" value="412" />
+                                            <input type="hidden" name="add-to-cart" value="" />
+                                            <input type="hidden" name="product_id" value="" />
                                             <input type="hidden" name="variation_id" class="variation_id" value="0" />
                                         </div>
                                     </div>
@@ -597,45 +597,10 @@
 <script type="text/javascript" src="js/cart-api.js"></script>
 <script type="text/javascript" src="js/mini-cart.js"></script>
 <script type='text/javascript' src='js/local-cart.js'></script>
+<script type='text/javascript' src='js/product-data.js'></script>
 <script type='text/javascript' src='js/single-product.js'></script>
 <script type='text/javascript' src='js/auth-session.js'></script>
-<script>
-    // Dynamically update the <title> tag based on product
-    document.addEventListener('DOMContentLoaded', function () {
-        function getQueryParam(param) {
-            const urlParams = new URLSearchParams(window.location.search);
-            return urlParams.get(param);
-        }
-        const productId = getQueryParam('product_id');
-        // Keep in sync with your JS product data
-        const products = {
-            458: "Evaporated Milk",
-            448: "Farm Sour Cream",
-            438: "Ricotta Salata",
-            412: "Parmesan Cheese",
-            471: "Pecorino Romano",
-            364: "Tested Raw Milk",
-            402: "Brie Cheese",
-            426: "Fromage a Raclette",
-            387: "Camembert Cheese",
-            420: "Fresh Milk",
-            430: "Butter",
-            450: "Yogurt",
-            460: "Chicken Eggs",
-            470: "Duck Eggs",
-            480: "Quail Eggs",
-            490: "Beef",
-            500: "Pork",
-            510: "Chicken",
-            520: "Lamb",
-            530: "Bacon",
-            540: "Sausage"
-        };
-        if (productId && products[productId]) {
-            document.title = products[productId] + " – Dairy Farm";
-        }
-    });
-</script>
+<!-- Title now updated dynamically by single-product.js after API response -->
 
 </body>
 
