--- a/single-product.html
+++ b/single-product.html
@@ -598,7 +598,8 @@
 <script type="text/javascript" src="js/mini-cart.js"></script>
 <script type='text/javascript' src='js/local-cart.js'></script>
 <script type='text/javascript' src='js/product-data.js'></script>
-<script type='text/javascript' src='js/single-product.js'></script>
+<script>window.APP_VERSION = '2025111301';</script>
+<script type='text/javascript' src='js/single-product.js?v=2025111301'></script>
 <script type='text/javascript' src='js/auth-session.js'></script>
 <!-- Title now updated dynamically by single-product.js after API response -->
 
