--- a/classic.html
+++ b/classic.html
@@ -185,150 +185,38 @@
             <div class="content_wrap">
                 <div class="content">
                     <div id="blog-list"></div>
-                    <nav id="pagination" class="pagination_wrap pagination_pages">
-                        <a href="classic.html?blog=1" class="pager_current active">1</a>
-                        <a href="classic.html?blog=2" class="">2</a>
-                        <a href="classic.html?blog=3" class="">3</a>
-                        <a href="#" class="pager_dot ">&hellip;</a>
-                        <a href="#" class="pager_next "></a>
-                        <a href="#" class="pager_last "></a>
-                    </nav>
+                    <nav id="pagination" class="pagination_wrap pagination_pages"></nav>
                 </div>
                 <div class="sidebar widget_area scheme_original" role="complementary">
                     <div class="sidebar_inner widget_area_inner">
                         <aside class="widget widget_categories">
                             <h4 class="widget_title">Categories</h4>
-                            <ul>
-                                <li class="cat-item">
-                                    <a href="#">Dairy Herd Management</a>
-                                </li>
-                                <li class="cat-item">
-                                    <a href="#">Farm Life &amp; Habitants</a>
-                                </li>
-                                <li class="cat-item">
-                                    <a href="#">The Industry&#039;s Input</a>
-                                </li>
-                                <li class="cat-item">
-                                    <a href="#">Unhealthy Myths</a>
-                                </li>
-                                <li class="cat-item">
-                                    <a href="#">World Dairy Markets</a>
-                                </li>
-                            </ul>
+                            <ul></ul>
                         </aside>
                         <aside class="widget widget_search">
                             <h4 class="widget_title">Search</h4>
-                            <form role="search" method="get" class="search_form" action="index.html">
+                            <form role="search" method="get" class="search_form" action="classic.html">
                                 <input type="text" class="search_field" placeholder="Keyword" value="" name="s" title="Search for:" />
                                 <button type="submit" class="search_button icon-search"></button>
                             </form>
                         </aside>
                         <aside class="widget widget_archive">
                             <h4 class="widget_title">Archives</h4>
-                            <ul>
-                                <li><a href='#'>September 2016</a></li>
-                                <li><a href='#'>August 2016</a></li>
-                                <li><a href='#'>July 2016</a></li>
-                                <li><a href='#'>June 2016</a></li>
-                                <li><a href='#'>May 2016</a></li>
-                            </ul>
+                            <ul></ul>
                         </aside>
                         <aside class="widget widget_calendar">
                             <h4 class="widget_title">Calendar</h4>
                             <div id="calendar_wrap" class="calendar_wrap">
-                                <table class="wp-calendar">
-                                    <thead>
-                                    <tr>
-                                        <th class="month_prev">
-                                            <a href="#" data-type="post" data-year="2016" data-month="09" data-letter="1" title="View posts for September 2016"></a>
-                                        </th>
-                                        <th class="month_cur" colspan="5">October <span>2017</span></th>
-                                        <th class="month_next">&nbsp;</th>
-                                    </tr>
-                                    <tr>
-                                        <th class="weekday" scope="col" title="Monday">M</th>
-                                        <th class="weekday" scope="col" title="Tuesday">T</th>
-                                        <th class="weekday" scope="col" title="Wednesday">W</th>
-                                        <th class="weekday" scope="col" title="Thursday">T</th>
-                                        <th class="weekday" scope="col" title="Friday">F</th>
-                                        <th class="weekday" scope="col" title="Saturday">S</th>
-                                        <th class="weekday" scope="col" title="Sunday">S</th>
-                                    </tr>
-                                    </thead>
-                                    <tbody>
-                                    <tr>
-                                        <td colspan="6" class="pad"><span class="day_wrap">&nbsp;</span></td>
-                                        <td class="day"><span class="day_wrap">1</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td class="today"><span class="day_wrap">2</span></td>
-                                        <td class="day"><span class="day_wrap">3</span></td>
-                                        <td class="day"><span class="day_wrap">4</span></td>
-                                        <td class="day"><span class="day_wrap">5</span></td>
-                                        <td class="day"><span class="day_wrap">6</span></td>
-                                        <td class="day"><span class="day_wrap">7</span></td>
-                                        <td class="day"><span class="day_wrap">8</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td class="day"><span class="day_wrap">9</span></td>
-                                        <td class="day"><span class="day_wrap">10</span></td>
-                                        <td class="day"><span class="day_wrap">11</span></td>
-                                        <td class="day"><span class="day_wrap">12</span></td>
-                                        <td class="day"><span class="day_wrap">13</span></td>
-                                        <td class="day"><span class="day_wrap">14</span></td>
-                                        <td class="day"><span class="day_wrap">15</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td class="day"><span class="day_wrap">16</span></td>
-                                        <td class="day"><span class="day_wrap">17</span></td>
-                                        <td class="day"><span class="day_wrap">18</span></td>
-                                        <td class="day"><span class="day_wrap">19</span></td>
-                                        <td class="day"><span class="day_wrap">20</span></td>
-                                        <td class="day"><span class="day_wrap">21</span></td>
-                                        <td class="day"><span class="day_wrap">22</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td class="day"><span class="day_wrap">23</span></td>
-                                        <td class="day"><span class="day_wrap">24</span></td>
-                                        <td class="day"><span class="day_wrap">25</span></td>
-                                        <td class="day"><span class="day_wrap">26</span></td>
-                                        <td class="day"><span class="day_wrap">27</span></td>
-                                        <td class="day"><span class="day_wrap">28</span></td>
-                                        <td class="day"><span class="day_wrap">29</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td class="day"><span class="day_wrap">30</span></td>
-                                        <td class="day"><span class="day_wrap">31</span></td>
-                                        <td class="pad" colspan="5"><span class="day_wrap">&nbsp;</span></td>
-                                    </tr>
-                                    </tbody>
-                                </table>
+                                <table class="wp-calendar"></table>
                             </div>
                         </aside>
                         <aside class="widget widget_recent_entries">
                             <h4 class="widget_title">Recent Posts</h4>
-                            <ul>
-                                <li>
-                                    <a href="single-post.html?content=1">Dairy Nutrition and Profitability Optimization</a>
-                                </li>
-                                <li>
-                                    <a href="single-post.html?content=2">Milk and Cheese Against Allergies</a>
-                                </li>
-                                <li>
-                                    <a href="single-post.html?content=3">The Butter Business Growth</a>
-                                </li>
-                            </ul>
+                            <ul></ul>
                         </aside>
                         <aside class="widget widget_tag_cloud">
                             <h4 class="widget_title">Tags</h4>
-                            <div class="tagcloud">
-                                <a href="#" aria-label="agriculture (6 items)">agriculture</a>
-                                <a href="#" aria-label="cheese (5 items)">cheese</a>
-                                <a href="#" aria-label="dairy (6 items)">dairy</a>
-                                <a href="#" aria-label="milk (4 items)">milk</a>
-                                <a href="#" aria-label="natural (4 items)">natural</a>
-                                <a href="#" aria-label="organic (5 items)">organic</a>
-                            </div>
+                            <div class="tagcloud"></div>
                         </aside>
                         <aside class="widget widget_meta">
                             <h4 class="widget_title">Meta</h4>
