removing recipe and changing name of blog

--- a/farm.html
+++ b/farm.html
@@ -129,10 +129,10 @@
                             <ul id="menu_main" class="menu_main_nav">
                                 <li class="menu-item current-menu-ancestor current-menu-parent menu-item-has-children"><a href="index.html"><span>Home</span></a></li>
                                 <li class="menu-item menu-item-has-children"><a href="about-2.html"><span>About us</span></a></li>
-                                <li class="menu-item"><a href="farm.html"><span>Farm</span></a></li>
-                                <li class="menu-item menu-item-has-children"><a href="classic.html"><span>Blog</span></a></li>
+                                <!-- <li class="menu-item"><a href="farm.html"><span>Farm</span></a></li> -->
+                                <li class="menu-item menu-item-has-children"><a href="classic.html"><span>News</span></a></li>
                                 <li class="menu-item"><a href="shop.html"><span>Products</span></a></li>
-                                <li class="menu-item"><a href="recipes.html"><span>Recipes</span></a></li>
+                                <!-- <li class="menu-item"><a href="recipes.html"><span>Recipes</span></a></li> -->
                                 <li class="menu-item"><a href="contacts.html"><span>Contacts</span></a></li>
                             </ul>
                         </nav>
