--- a/cart.html
+++ b/cart.html
@@ -143,8 +143,8 @@
                                         </li>
                                     </ul>
                                 </li>
-                                <li class="menu-item"><a href="farm.html"><span>Farm</span></a></li>
-                                <li class="menu-item menu-item-has-children"><a href="classic.html"><span>Blog</span></a>
+                                <!-- <li class="menu-item"><a href="farm.html"><span>Farm</span></a></li> -->
+                                <li class="menu-item menu-item-has-children"><a href="classic.html"><span>News</span></a>
                                     <ul class="sub-menu">
                                         <li class="menu-item"><a href="classic.html"><span>Classic</span></a></li>
                                         <li class="menu-item menu-item-has-children"><a href="#"><span>Masonry</span></a>
@@ -162,7 +162,7 @@
                                     </ul>
                                 </li>
                                 <li class="menu-item current-menu-item"><a href="shop.html"><span>Products</span></a></li>
-                                <li class="menu-item"><a href="recipes.html"><span>Recipes</span></a></li>
+                                <!-- <li class="menu-item"><a href="recipes.html"><span>Recipes</span></a></li> -->
                                 <li class="menu-item"><a href="contacts.html"><span>Contacts</span></a></li>
                             </ul>
                         </nav>
